--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -65,7 +65,7 @@ import Layout from '../components/layout.astro';
 >
   <main class="steps">
     <section class="step">
-      <h2 class="stepHeading">Deploy Previews</h2>
+      <h2 class="stepHeading">Deploy Previews Skipped In Ci</h2>
       <p>
         Every pull request is automatically built in an
         identical-to-production environment for
